k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dummy-function-sleep
spec:
  type: NodePort
  selector:
    app: dummy-function-sleep
  ports:
    - port: 8080
      targetPort: 8080
